Operation Shattered Web Knives/Skins
Operation Shattered Web Knives/Skins

--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,16 +1,16 @@
 "Skins"
 {
-	"Commemoration"
+	"Comemoração"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Sacrifício"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"Fogo Selvagem"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
@@ -20,7 +20,7 @@
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"Agente"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
@@ -30,7 +30,7 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Morte por Filhote"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -40,17 +40,17 @@
 		"index"		"911"
 		"classes"	"weapon_p90;"
 	}
-	"Hydra"
+	"Hidra"
 	{
 		"index"		"910"
 		"classes"	"weapon_mp9;"
 	}
-	"Popdog"
+	"Pop Dog"
 	{
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Caixa Clássica"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,17 +60,17 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Colega"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Com Flash"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Desativada"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -84,6 +84,91 @@
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Caça Antigo"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Disparo Sangrento"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Perseguidora"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Colônia IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Rasgos"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Equilíbrio"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsidiana"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Dobras Neon"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Recordações"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Areia Preta"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Plumagem"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Dizimadora"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Banho de Ácido"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Falha de Contenção"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Lobo Ártico"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Aço de Damasco"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Trança Noturna"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Quartzo Limado"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barricada"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Piras"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Quartzo Esmeralda"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjölnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Pedra Vermelha"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Trança Cobreada"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Trança Congelada"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Jörmungandr Astral"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Jörmungandr Flamejante"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Jörmungandr Esmeralda"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Barroco Arenoso"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Vitral"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Spray do Canal"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Mosaico de Pedra"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Maçã do Amor"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Barroco Laranja"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Barroco Roxo"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Barroco Vermelho"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Filigrana Laranja"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Filigrana Vermelha"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Filigrana Sombria"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Murano Azul-marinho"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Murano Violeta"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Murano Laranja"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinqueda"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"Príncipe"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Ave Marinha"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Jardim de Bambu"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Quebra-galho"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Matagal Selvagem"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Crepúsculo"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Chita Marinho"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Lírio Selvagem"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Folha Enferrujada"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Folha Sintética"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Folha de Bananeira"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Florescer Sombrio"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Florescer Carmesim"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Florescer Verdejante"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Lírio da Meia-noite"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Lírio do Pôr do Sol"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Lírio-de-um-dia"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Lótus Selvagem"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Listra Noturna"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Olho de Atena"
 	{
@@ -1190,7 +1505,7 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"X-Ray"
+	"Raio-X"
 	{
 		"index"		"125"
 		"classes"	"weapon_p250;"
@@ -1220,7 +1535,7 @@
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"Varredora"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
@@ -1345,17 +1660,17 @@
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"Instalação Sombria"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"Planta da Instalação"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"Negativo da Instalação"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
@@ -1813,7 +2128,7 @@
 	"Esmeralda"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Prognóstico Marítimo"
 	{
@@ -1863,7 +2178,7 @@
 	"Desbravador"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Astério"
 	{
@@ -2403,7 +2718,7 @@
 	"Índigo"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Azul Real"
 	{
@@ -2428,7 +2743,7 @@
 	"Cota de Malha"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Cavaleiro"
 	{
@@ -2970,7 +3285,7 @@
 		"index"		"216"
 		"classes"	"weapon_galilar;weapon_tec9;"
 	}
-	"Raio X"
+	"Raio-X"
 	{
 		"index"		"215"
 		"classes"	"weapon_m4a1;"
@@ -3173,7 +3488,7 @@
 	"Brasas"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BUM"
 	{
@@ -3233,7 +3548,7 @@
 	"Bronze"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Nogueira"
 	{
@@ -3268,7 +3583,7 @@
 	"Selva"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Marcas Urbanas"
 	{
@@ -3288,7 +3603,7 @@
 	"Máscara Urbana"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Casca de Laranja"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornado"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Tempestade"
 	{
@@ -3413,7 +3728,7 @@
 	"Floresta Boreal"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Floresta no Inverno"
 	{
@@ -3438,7 +3753,7 @@
 	"Grade de Safári"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Escorpião"
 	{
@@ -3473,7 +3788,7 @@
 	"Massacre"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Descarga Elétrica"
 	{
@@ -3498,17 +3813,17 @@
 	"Aquecimento de Aço"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Manchado"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Aço Azul"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Cobre"
 	{
@@ -3528,7 +3843,7 @@
 	"Degradê"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Chamas"
 	{
@@ -3623,7 +3938,7 @@
 	"Teia Rubra"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Crânios"
 	{
@@ -3653,7 +3968,7 @@
 	"Camuflagem Digital — Floresta"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Maçã do Amor"
 	{
