--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -1,6 +1,6 @@
 "Skins"
 {
-	"Commemoration"
+	"Commémoration"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
@@ -35,7 +35,7 @@
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"Nostalgie"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
@@ -45,12 +45,12 @@
 		"index"		"910"
 		"classes"	"weapon_mp9;"
 	}
-	"Popdog"
+	"Pop Dog"
 	{
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Caisse classique"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,30 +60,115 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Coéquipier"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"GSS"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Démantèlement"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
 	}
-	"Elite 1.6"
+	"Élite 1.6"
 	{
 		"index"		"903"
 		"classes"	"weapon_elite;"
 	}
-	"Aztec"
+	"Aztèque"
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Vieux coucou"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Hyperémie oculaire"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Fauve"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Colonie IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Rayures"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Équilibre"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsidienne"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Surcouche néon"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Souvenir"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Sable noir"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Plume"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Massacreur"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Lavage à l'acide"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Brèche de confinement"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Loup arctique"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Acier de Damas"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Borre nocturne"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Quartz vert mousse"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barricade"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Bûcher"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Quartz émeraude"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjöllnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Pierre rouge"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Borre de cuivre"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Borre de givre"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Jörmungandr astral"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Jörmungandr enflammé"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Jörmungandr émeraude"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Sable baroque"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Vitrail"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Canal"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Mosaïque de pierres"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Pomme d'amour"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Orange baroque"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Violet baroque"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Rouge baroque"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Filigrane orange"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Filigrane rouge"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Filigrane sombre"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Murano bleu marine"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Murano violet"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Murano orange"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinquedea"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"Prince"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Oiseau de mer"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Jardin de bambou"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Bois flotté"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Canopée"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Coucher de soleil"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Calicot marin"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Lys sauvage"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Feuille rouillée"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Feuille synthétique"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Feuille de bananier"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Rose sombre"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Rose pourpre"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Rose turquoise"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Lys belle-de-minuit"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Lys belle-de-soir"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Lys belle-de-jour"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Lotus sauvage"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Rayures nocturnes"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Œil d'Athéna"
 	{
@@ -1813,7 +2128,7 @@
 	"Émeraude"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Prévision de livraison"
 	{
@@ -1863,7 +2178,7 @@
 	"Éclaireur"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Astérion"
 	{
@@ -2403,7 +2718,7 @@
 	"Indigo"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Bleu royal"
 	{
@@ -2428,7 +2743,7 @@
 	"Cotte de mailles"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Chevalier"
 	{
@@ -3173,7 +3488,7 @@
 	"Brûlé"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BOUM"
 	{
@@ -3233,7 +3548,7 @@
 	"Laiton"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Noyer"
 	{
@@ -3268,7 +3583,7 @@
 	"Jungle"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Pointillage urbain"
 	{
@@ -3288,7 +3603,7 @@
 	"Masque urbain"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Peau d'orange"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornade"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Tempête"
 	{
@@ -3413,7 +3728,7 @@
 	"Forêt boréale"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Forêt hivernale"
 	{
@@ -3438,7 +3753,7 @@
 	"Maillage safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Scorpion"
 	{
@@ -3473,7 +3788,7 @@
 	"Carnage"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Éclair foudroyant"
 	{
@@ -3498,17 +3813,17 @@
 	"Cémenté"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Tacheté"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Acier bleui"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Cuivré"
 	{
@@ -3528,7 +3843,7 @@
 	"Dégradé"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Flamme"
 	{
@@ -3623,7 +3938,7 @@
 	"Toile pourpre"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Crânes"
 	{
@@ -3653,7 +3968,7 @@
 	"Tempéré numérique"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Pomme d'amour"
 	{
