--- a/addons/sourcemod/configs/weapons/weapons_italian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_italian.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Commemoration"
+	"Commemorazione"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Sacrificio"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
@@ -15,12 +15,12 @@
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Plastico"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"Agente"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
@@ -30,7 +30,7 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Cucciolo letale"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -45,12 +45,12 @@
 		"index"		"910"
 		"classes"	"weapon_mp9;"
 	}
-	"Popdog"
+	"Pop dog"
 	{
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Cassa classica"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,17 +60,17 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Compagno"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Flashbang!"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Smantellato"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -84,6 +84,91 @@
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Warbird"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Bloodshot"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Stalker"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Colony IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Torn"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Balance"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsidian"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Neon Ply"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Memento"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Black Sand"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Plume"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Decimator"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Acid Wash"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Containment Breach"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Arctic Wolf"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat Rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Acciaio damasco"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Night Borre"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Moss Quartz"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barricade"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Pyre"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Emerald Quartz"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjölnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Red Stone"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Copper Borre"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Frost Borre"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Astral Jörmungandr"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Flame Jörmungandr"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Emerald Jörmungandr"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Boroque Sand"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Stained Glass"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Canal Spray"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Stone Mosaico"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Mela caramellata"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Baroque Orange"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Baroque Purple"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Baroque Red"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Orange Filigree"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Red Filigree"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Dark Filigree"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Navy Murano"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Violet Murano"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Orange Murano"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinquedea"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"The Prince"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Uccello marino"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Bamboo Garden"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Surfwood"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Jungle Thicket"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Sundown"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Sea Calico"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Wild Lily"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Rust Leaf"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Synth Leaf"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Banana Leaf"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Dark Blossom"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Crimson Blossom"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Teal Blossom"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Midnight Lily"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Sunset Lily"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Day Lily"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Wild Lotus"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Striscia notturna"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Occhio di Atena"
 	{
@@ -1813,7 +2128,7 @@
 	"Smeraldo"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Previsioni"
 	{
@@ -1863,7 +2178,7 @@
 	"Esploratore"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Asterio"
 	{
@@ -2403,7 +2718,7 @@
 	"Indaco"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Blu reale"
 	{
@@ -2428,7 +2743,7 @@
 	"Cotta di maglia"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Cavaliere"
 	{
@@ -3173,7 +3488,7 @@
 	"Cotto"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BOOM"
 	{
@@ -3233,7 +3548,7 @@
 	"Ottone"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Noce"
 	{
@@ -3268,7 +3583,7 @@
 	"Giungla"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Trattini urbani"
 	{
@@ -3288,7 +3603,7 @@
 	"Maschera urbana"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Buccia d'arancia"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornado"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Tempesta"
 	{
@@ -3413,7 +3728,7 @@
 	"Foresta boreale"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Foresta invernale"
 	{
@@ -3438,7 +3753,7 @@
 	"Griglia safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Scorpione"
 	{
@@ -3473,7 +3788,7 @@
 	"Massacro"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Fulmine"
 	{
@@ -3498,17 +3813,17 @@
 	"Cementato"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Macchiato"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Acciaio blu"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Rame"
 	{
@@ -3528,7 +3843,7 @@
 	"Dissolvenza"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Fiamme"
 	{
@@ -3623,7 +3938,7 @@
 	"Ragnatela cremisi"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Teschi"
 	{
@@ -3653,7 +3968,7 @@
 	"DDPAT forestale"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Mela caramellata"
 	{
