--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Commemoration"
+	"Upamiętnienie"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Poświęcenie"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
@@ -15,7 +15,7 @@
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Materiał wybuchowy"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
@@ -30,7 +30,7 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Śmierć od szczeniaczków"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -50,7 +50,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Klasyczna skrzynia"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,22 +60,22 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Kumpel"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Rozbłysk"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Zlikwidowany"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
 	}
-	"Elite 1.6"
+	"Elita 1.6"
 	{
 		"index"		"903"
 		"classes"	"weapon_elite;"
@@ -84,6 +84,91 @@
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Demobil"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Przekrwiony"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Koci łowca"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Kolonia IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Rozdarty"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Równowaga"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsydian"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Neonowa osnowa"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Pamiątka"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Czarny piasek"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Pióropusz"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Pogromca"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Kwasowa kąpiel"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Naruszenie kwarantanny"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Wilk polarny"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Stal damasceńska"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Nocny kurhan"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Mchowy kwarc"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barykada"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Stos pogrzebowy"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Szmaragdowy kwarc"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjölnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Czerwony kamień"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Miedziany kurhan"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Mroźny kurhan"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Gwiezdny Jormungand"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Ognisty Jormungand"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Szmaragdowy Jormungand"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Barokowy piasek"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Witraż"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Spray kanałowy"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Kamienna mozaika"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Jabłko kandyzowane"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Barokowy oranż"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Barokowa purpura"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Barokowa czerwień"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Pomarańczowy filigran"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Czerwony filigran"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Ciemny filigran"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Granatowe szkło murańskie"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Fioletowe szkło murańskie"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Pomarańczowe szkło murańskie"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinquedea"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"Książę"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Morski ptak"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Bambusowy ogród"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Drewno dryfujące"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Gąszcz dżungli"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Zachód Słońca"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Morskie kaliko"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Dzika lilia"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Rdzawe liście"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Liście syntetyczne"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Liście bananowca"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Ciemny rozkwit"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Szkarłatny rozkwit"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Turkusowy rozkwit"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Lilia północy"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Lilia zachodu Słońca"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Lilia dnia"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Dziki lotos"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Nocne pręgi"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Oko Ateny"
 	{
@@ -1813,7 +2128,7 @@
 	"Szmaragd"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Pogoda dla rybaków"
 	{
@@ -1863,7 +2178,7 @@
 	"Pionier"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Asterion"
 	{
@@ -2403,7 +2718,7 @@
 	"Indygo"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Królewski błękit"
 	{
@@ -2428,7 +2743,7 @@
 	"Kolczuga"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Rycerz"
 	{
@@ -3173,7 +3488,7 @@
 	"Popiół"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BUM"
 	{
@@ -3233,7 +3548,7 @@
 	"Mosiądz"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Orzech"
 	{
@@ -3268,7 +3583,7 @@
 	"Dżungla"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Miejski paskowany"
 	{
@@ -3288,7 +3603,7 @@
 	"Miejski zamaskowany"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Skórka pomarańczy"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornado"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Burza"
 	{
@@ -3413,7 +3728,7 @@
 	"Tajga"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Las zimowy"
 	{
@@ -3438,7 +3753,7 @@
 	"Siatka safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Skorpion"
 	{
@@ -3473,7 +3788,7 @@
 	"Rzeź"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Uderzenie pioruna"
 	{
@@ -3498,17 +3813,17 @@
 	"Stal nawęglana"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Śniedź"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Niebieska stal"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Miedź"
 	{
@@ -3528,7 +3843,7 @@
 	"Gradient"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Żar"
 	{
@@ -3623,7 +3938,7 @@
 	"Szkarłatna sieć"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Czaszki"
 	{
@@ -3653,7 +3968,7 @@
 	"Leśny DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Jabłko kandyzowane"
 	{
