--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,89 +1,174 @@
 "Skins"
 {
-	"Commemoration"
+	"纪念碑"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"烈焰天使"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"野火"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"塑胶炸弹"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"探员"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Assault"
+	"仓库突击"
 	{
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"致命萌犬"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"往日行动"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
 	}
-	"Hydra"
+	"九头蛇"
 	{
 		"index"		"910"
 		"classes"	"weapon_mp9;"
 	}
-	"Popdog"
+	"碰碰狗"
 	{
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"板条箱"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
 	}
-	"Inferno"
+	"炼狱小镇"
 	{
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"好兄弟"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"闪光舞步"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"退役"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
 	}
-	"Elite 1.6"
+	"1.6精英"
 	{
 		"index"		"903"
 		"classes"	"weapon_elite;"
 	}
-	"Aztec"
+	"阿兹特克"
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"战隼"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"喋血战士"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"潜行者"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"四号栖息地"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"撕起来"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"左右开花"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"黑曜石"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"七彩斑斓"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"记忆碎片"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"黑砂"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"风卷残云"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"屠杀者"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"鼻青脸肿"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"突破封锁"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"极地孤狼"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"复古浪潮"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"路霸"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"大马士革钢"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"暗夜锁链"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"苔藓石英"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"路障"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"熊熊烈焰"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"翡翠石英"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"雷神之锤"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"血染风采"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"赤金锁链"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"寒霜锁链"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"星辰巨蟒"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"烈焰巨蟒"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"翡翠巨蟒"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"永恒之枪"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"巴洛克之沙"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"彩绘玻璃"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"水都泛波"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"石砌"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"红苹果"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"巴洛克之橙"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"巴洛克之紫"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"巴洛克之红"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"橙黄镂刻"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"绯红镂刻"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"暗之镂刻"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"穆拉诺之蓝"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"穆拉诺之紫"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"穆拉诺之橙"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"五指短剑"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"王子"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"海鸟"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"茂竹之园"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"冲浪木"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"灌木丛"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"日暮"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"海滨印花"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"野百合"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"锈叶"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"合成叶"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"芭蕉叶"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"暗之绽放"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"绛之绽放"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"青之绽放"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"午夜百合"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"日落百合"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"忘忧草"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"野生莲花"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"夜色"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"雅典娜之眼"
 	{
@@ -890,7 +1205,7 @@
 		"index"		"601"
 		"classes"	"weapon_aug;"
 	}
-	"霓虹革命"
+	"霓虹变革"
 	{
 		"index"		"600"
 		"classes"	"weapon_ak47;"
@@ -1813,7 +2128,7 @@
 	"翡翠色调"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"海滨预测者"
 	{
@@ -1863,7 +2178,7 @@
 	"寻路者"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"星点"
 	{
@@ -2403,7 +2718,7 @@
 	"紫青之色"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"宝蓝之色"
 	{
@@ -2428,7 +2743,7 @@
 	"坚固链甲"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"骑士"
 	{
@@ -3173,7 +3488,7 @@
 	"枯焦之色"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"*嘣*"
 	{
@@ -3233,7 +3548,7 @@
 	"黄铜"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"胡桃木"
 	{
@@ -3268,7 +3583,7 @@
 	"狂野丛林"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"都市虚线"
 	{
@@ -3288,7 +3603,7 @@
 	"都市伪装"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"橘皮涂装"
 	{
@@ -3353,7 +3668,7 @@
 	"狂哮飓风"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"暴风呼啸"
 	{
@@ -3413,7 +3728,7 @@
 	"北方森林"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"冬之森林"
 	{
@@ -3438,7 +3753,7 @@
 	"狩猎网格"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"致命红蝎"
 	{
@@ -3473,7 +3788,7 @@
 	"屠夫"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"雷击"
 	{
@@ -3498,17 +3813,17 @@
 	"表面淬火"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"人工染色"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"蓝钢"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"镀铜"
 	{
@@ -3528,7 +3843,7 @@
 	"渐变之色"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"炽烈之炎"
 	{
@@ -3623,7 +3938,7 @@
 	"深红之网"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"死亡骷髅"
 	{
@@ -3653,7 +3968,7 @@
 	"森林 DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"红苹果"
 	{
