--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Commemoration"
+	"Conmemoración"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Sacrificio"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
@@ -20,17 +20,17 @@
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"Agente"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Assault"
+	"Asalto"
 	{
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Muerte por perrito"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -50,7 +50,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Caja clásica"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,7 +60,7 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Colega"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
@@ -70,7 +70,7 @@
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Desmantelado"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -80,10 +80,95 @@
 		"index"		"903"
 		"classes"	"weapon_elite;"
 	}
-	"Aztec"
+	"Azteca"
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Pájaro de guerra"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Disparo sangriento"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Stalker"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Colonia IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Torn"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Equilibrio"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsidiana"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Capa de neón"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Recuerdo"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Arena negra"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Pluma"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Diezmador"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Lavado con ácido"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Containment Breach"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Lobo ártico"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat Rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Acero de damasco"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Night Borre"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Cuarzo musgoso"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barricada"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Flameante"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Cuarzo esmeralda"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjölnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Piedra roja"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Armazón de cobre"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Frost Borre"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Jörmungandr azul astral"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Jörmungandr Flameante"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Jörmungandr esmeralda"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Arena barroco"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Vidriera"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Espray de canal"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Mosaico de piedra"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Manzana de caramelo"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Anaranjado barroco"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Púrpura barroco"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Rojo barroco"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Filigrana naranja"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Filigrana roja"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Filigrana oscura"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Murano azul"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Murano violeta"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Murano naranja"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinquedea"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"El príncipe"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Ave marina"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Jardín de bambú"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Madera de surf"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Matorral de la jungla"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Puesta de sol"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Calicó marino"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Lirio salvaje"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Hoja rojiza"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Hoja sintética"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Hoja de banano"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Flores oscuras"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Flores carmesíes"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Flores azul verdosas"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Lirio de medianoche"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Lirio del ocaso"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Lirio de un día"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Loto silvestre"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Franja nocturna"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Ojo de Atenea"
 	{
@@ -1813,7 +2128,7 @@
 	"Esmeralda"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Pronóstico marítimo"
 	{
@@ -1863,7 +2178,7 @@
 	"Explorador"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Asterión"
 	{
@@ -2403,7 +2718,7 @@
 	"Índigo"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Azul real"
 	{
@@ -2428,7 +2743,7 @@
 	"Cota de malla"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Caballero"
 	{
@@ -3173,7 +3488,7 @@
 	"Chamuscado"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BUM"
 	{
@@ -3233,7 +3548,7 @@
 	"Latón"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Nuez"
 	{
@@ -3268,7 +3583,7 @@
 	"Jungla"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Punteado urbano"
 	{
@@ -3288,7 +3603,7 @@
 	"Pátina urbana"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Piel de naranja"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornado"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Tormenta"
 	{
@@ -3413,7 +3728,7 @@
 	"Bosque boreal"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Bosque invernal"
 	{
@@ -3438,7 +3753,7 @@
 	"Malla de safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Escorpión"
 	{
@@ -3473,7 +3788,7 @@
 	"Masacre"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Relámpago"
 	{
@@ -3498,17 +3813,17 @@
 	"Acero templado"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Manchado"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Azul metalizado"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Cobrizo"
 	{
@@ -3528,7 +3843,7 @@
 	"Desteñido"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Llamarada"
 	{
@@ -3623,7 +3938,7 @@
 	"Tela escarlata"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Calaveras"
 	{
@@ -3653,7 +3968,7 @@
 	"DDPAT bosque"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Manzana de caramelo"
 	{
