--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Commemoration"
+	"Gedenkenfeier"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Opfer"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"Lauffeuer"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Plastik"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
@@ -30,12 +30,12 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Tod durch Welpe"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"Nostalgie"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
@@ -50,7 +50,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Klassische Kiste"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,17 +60,17 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Kumpel"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Ausgefallen"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Stillgelegt"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -84,6 +84,91 @@
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Kriegsvogel"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Blutunterlaufen"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"Stalker"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Kolonie IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Zerrissen"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Balance"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Obsidian"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Neonschicht"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Andenken"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Schwarzer Sand"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Federschmuck"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Dezimierer"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Säurewäsche"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Sicherheitsverletzung"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Polarwolf"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Rat Rod"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Embargo"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Damaszener Stahl"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Knoten der Nacht"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Moosgrüner Quarz"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Barrikade"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Scheiterhaufen"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Smaragdgrüner Quarz"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Mjölnir"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Rotstein"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Goldknoten"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Silberknoten"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Sternfarbene Midgardschlange"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Flammende Midgardschlange"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Smaragdgrüne Midgardschlange"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Gungnir"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Barocker Sand"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Buntglas"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Wasserwege"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Steinmosaik"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Kandierter Apfel"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Barock-orange"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Barock-violett"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Venezianisch Rot"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Oranges Filigranwerk"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Rotes Filigranwerk"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Dunkles Filigranwerk"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Marineblauer Muranostil"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Violetter Muranostil"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Orangener Muranostil"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Cinquedea"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"Der Prinz"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Seevogel"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Bambusgarten"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Treibholz"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Dschungeldickicht"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Sonnenuntergang"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Meeresblick"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Wilde Lilie"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Rostige Blätter"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Synthetische Blätter"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Bananenblatt"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Dunkle Blüte"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Purpurne Blüte"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Türkise Blüte"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Mitternachtlilie"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Lilie der Dämmerung"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Taglilie"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Wilder Lotus"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Nachtstreifen"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Auge der Athene"
 	{
@@ -1813,7 +2128,7 @@
 	"Smaragd"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Seewetterdienst"
 	{
@@ -1863,7 +2178,7 @@
 	"Pfadfinder"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Asterion"
 	{
@@ -2403,7 +2718,7 @@
 	"Indigo"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Königsblau"
 	{
@@ -2428,7 +2743,7 @@
 	"Kettenhemd"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Ritter"
 	{
@@ -3173,7 +3488,7 @@
 	"Versengt"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"BUMM"
 	{
@@ -3233,7 +3548,7 @@
 	"Messing"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Walnuss"
 	{
@@ -3268,7 +3583,7 @@
 	"Dschungel"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Städtisch gestrichelt"
 	{
@@ -3288,7 +3603,7 @@
 	"Städtisch maskiert"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Orangenschale"
 	{
@@ -3353,7 +3668,7 @@
 	"Tornado"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Sturm"
 	{
@@ -3413,7 +3728,7 @@
 	"Borealer Nadelwald"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Winterwald"
 	{
@@ -3438,7 +3753,7 @@
 	"Safarinetz"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Skorpion"
 	{
@@ -3473,7 +3788,7 @@
 	"Metzelei"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Blitzschlag"
 	{
@@ -3498,17 +3813,17 @@
 	"Einsatzgehärtet"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Gefleckt"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Blauer Stahl"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Kupfer"
 	{
@@ -3528,7 +3843,7 @@
 	"Farbverlauf"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Großbrand"
 	{
@@ -3623,7 +3938,7 @@
 	"Purpurnes Netz"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Totenschädel"
 	{
@@ -3653,7 +3968,7 @@
 	"Wald-DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Kandierter Apfel"
 	{
