--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,89 +1,174 @@
 "Skins"
 {
-	"Commemoration"
+	"Дань уважения"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Жертвенность"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"Дикое пламя"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Взрывчатка"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"Агент"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Assault"
+	"Тот самый контейнер"
 	{
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Смертоносные пёсики"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"Ностальгия"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
 	}
-	"Hydra"
+	"Гидра"
 	{
 		"index"		"910"
 		"classes"	"weapon_mp9;"
 	}
-	"Popdog"
+	"Пёсик"
 	{
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Классический контейнер"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
 	}
-	"Inferno"
+	"Инферно"
 	{
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Приятель"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Световая пошла!"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Резерв"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
 	}
-	"Elite 1.6"
+	"Элита 1.6"
 	{
 		"index"		"903"
 		"classes"	"weapon_elite;"
 	}
-	"Aztec"
+	"Ацтекские мотивы"
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
+	}
+	"Ветеран полётов"
+	{
+		"index"		"900"
+		"classes"	"weapon_m249;"
+	}
+	"Глаз"
+	{
+		"index"		"899"
+		"classes"	"weapon_ssg08;"
+	}
+	"На охоте"
+	{
+		"index"		"898"
+		"classes"	"weapon_mac10;"
+	}
+	"Колония IV"
+	{
+		"index"		"897"
+		"classes"	"weapon_sg556;"
+	}
+	"Надрыв"
+	{
+		"index"		"896"
+		"classes"	"weapon_scar20;"
+	}
+	"Баланс"
+	{
+		"index"		"895"
+		"classes"	"weapon_elite;"
+	}
+	"Обсидиан"
+	{
+		"index"		"894"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Неоновые жилки"
+	{
+		"index"		"893"
+		"classes"	"weapon_mp7;"
+	}
+	"Реликвия"
+	{
+		"index"		"892"
+		"classes"	"weapon_revolver;"
+	}
+	"Чёрный песок"
+	{
+		"index"		"891"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Перо"
+	{
+		"index"		"890"
+		"classes"	"weapon_nova;"
+	}
+	"Опустошитель"
+	{
+		"index"		"889"
+		"classes"	"weapon_tec9;"
+	}
+	"Кислотный душ"
+	{
+		"index"		"888"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Распространение"
+	{
+		"index"		"887"
+		"classes"	"weapon_awp;"
+	}
+	"Арктический волк"
+	{
+		"index"		"886"
+		"classes"	"weapon_aug;"
+	}
+	"Колымага"
+	{
+		"index"		"885"
+		"classes"	"weapon_ak47;"
+	}
+	"Эмбарго"
+	{
+		"index"		"884"
+		"classes"	"weapon_bizon;"
 	}
 	"Дамасская сталь"
 	{
@@ -290,10 +375,240 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
+	"Ночной Борре"
+	{
+		"index"		"863"
+		"classes"	"weapon_famas;"
+	}
+	"Моховый кварц"
+	{
+		"index"		"862"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Баррикада"
+	{
+		"index"		"861"
+		"classes"	"weapon_sg556;"
+	}
+	"Погребальный костёр"
+	{
+		"index"		"860"
+		"classes"	"weapon_elite;"
+	}
+	"Изумрудный кварц"
+	{
+		"index"		"859"
+		"classes"	"weapon_cz75a;"
+	}
+	"Мьёльнир"
+	{
+		"index"		"763"
+		"classes"	"weapon_negev;"
+	}
+	"Красный камень"
+	{
+		"index"		"762"
+		"classes"	"weapon_ssg08;"
+	}
+	"Медный Борре"
+	{
+		"index"		"761"
+		"classes"	"weapon_mac10;"
+	}
+	"Морозный Борре"
+	{
+		"index"		"760"
+		"classes"	"weapon_xm1014;"
+	}
+	"Астральный Ёрмунганд"
+	{
+		"index"		"759"
+		"classes"	"weapon_p90;"
+	}
+	"Пламенный Ёрмунганд"
+	{
+		"index"		"758"
+		"classes"	"weapon_aug;"
+	}
+	"Изумрундый Ёрмунганд"
+	{
+		"index"		"757"
+		"classes"	"weapon_deagle;"
+	}
+	"Гунгнир"
+	{
+		"index"		"756"
+		"classes"	"weapon_awp;"
+	}
+	"Песочное барокко"
+	{
+		"index"		"920"
+		"classes"	"weapon_negev;"
+	}
+	"Витраж"
+	{
+		"index"		"867"
+		"classes"	"weapon_mp9;"
+	}
+	"Брызги воды"
+	{
+		"index"		"866"
+		"classes"	"weapon_revolver;"
+	}
+	"Каменная кладка"
+	{
+		"index"		"865"
+		"classes"	"weapon_scar20;"
+	}
+	"Карамельное яблоко"
+	{
+		"index"		"864"
+		"classes"	"weapon_sg556;"
+	}
+	"Оранжевое барокко"
+	{
+		"index"		"746"
+		"classes"	"weapon_nova;"
+	}
+	"Фиолетовое барокко"
+	{
+		"index"		"745"
+		"classes"	"weapon_ak47;"
+	}
+	"Красное барокко"
+	{
+		"index"		"744"
+		"classes"	"weapon_p90;"
+	}
+	"Оранжевая филигрань"
+	{
+		"index"		"743"
+		"classes"	"weapon_ssg08;"
+	}
+	"Красная филигрань"
+	{
+		"index"		"742"
+		"classes"	"weapon_mac10;"
+	}
+	"Тёмная филигрань"
+	{
+		"index"		"741"
+		"classes"	"weapon_p250;"
+	}
+	"Синее Мурано"
+	{
+		"index"		"740"
+		"classes"	"weapon_aug;"
+	}
+	"Фиолетовое Мурано"
+	{
+		"index"		"739"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Оранжевое Мурано"
+	{
+		"index"		"738"
+		"classes"	"weapon_tec9;"
+	}
+	"Чинкуэда"
+	{
+		"index"		"737"
+		"classes"	"weapon_mag7;"
+	}
+	"Принц"
+	{
+		"index"		"736"
+		"classes"	"weapon_awp;"
+	}
+	"Чайка"
+	{
+		"index"		"873"
+		"classes"	"weapon_bizon;"
+	}
+	"Бамбуковый сад"
+	{
+		"index"		"872"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Прибой"
+	{
+		"index"		"871"
+		"classes"	"weapon_mac10;"
+	}
+	"Тропическая чаща"
+	{
+		"index"		"870"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Заход солнца"
+	{
+		"index"		"869"
+		"classes"	"weapon_famas;"
+	}
+	"Морской узор"
+	{
+		"index"		"868"
+		"classes"	"weapon_ssg08;"
+	}
+	"Дикая лилия"
+	{
+		"index"		"734"
+		"classes"	"weapon_mp9;"
+	}
+	"Ржавые листья"
+	{
+		"index"		"733"
+		"classes"	"weapon_tec9;"
+	}
+	"Полимерные листья"
+	{
+		"index"		"732"
+		"classes"	"weapon_glock;"
+	}
+	"Банановые листья"
+	{
+		"index"		"731"
+		"classes"	"weapon_xm1014;"
+	}
+	"Тёмное цветение"
+	{
+		"index"		"730"
+		"classes"	"weapon_m4a1;"
+	}
+	"Багровое цветение"
+	{
+		"index"		"729"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Бирюзовое цветение"
+	{
+		"index"		"728"
+		"classes"	"weapon_mp7;"
+	}
+	"Полуночная лилия"
+	{
+		"index"		"727"
+		"classes"	"weapon_aug;"
+	}
+	"Закатная лилия"
+	{
+		"index"		"726"
+		"classes"	"weapon_p90;"
+	}
+	"Дневная лилия"
+	{
+		"index"		"725"
+		"classes"	"weapon_ump45;"
+	}
+	"Дикий лотос"
+	{
+		"index"		"724"
+		"classes"	"weapon_ak47;"
+	}
 	"Ночная полоса"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Глаз Афины"
 	{
@@ -1425,7 +1740,7 @@
 		"index"		"534"
 		"classes"	"weapon_mac10;"
 	}
-	"Звездный крейсер"
+	"Звёздный крейсер"
 	{
 		"index"		"533"
 		"classes"	"weapon_m4a1;"
@@ -1813,7 +2128,7 @@
 	"Изумруд"
 	{
 		"index"		"453"
-		"classes"	"weapon_cz75a;"
+		"classes"	"weapon_elite;weapon_cz75a;"
 	}
 	"Приморский прогноз"
 	{
@@ -1863,7 +2178,7 @@
 	"Лабиринт"
 	{
 		"index"		"443"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_hkp2000;weapon_usp_silencer;"
 	}
 	"Астерион"
 	{
@@ -2403,7 +2718,7 @@
 	"Индиго"
 	{
 		"index"		"333"
-		"classes"	"weapon_mac10;weapon_ump45;"
+		"classes"	"weapon_mac10;weapon_ump45;weapon_cz75a;"
 	}
 	"Королевский синий"
 	{
@@ -2428,7 +2743,7 @@
 	"Кольчуга"
 	{
 		"index"		"327"
-		"classes"	"weapon_hkp2000;"
+		"classes"	"weapon_mag7;weapon_hkp2000;"
 	}
 	"Рыцарь"
 	{
@@ -3070,7 +3385,7 @@
 		"index"		"196"
 		"classes"	"weapon_scar20;"
 	}
-	"Витраж"
+	"Деметра"
 	{
 		"index"		"195"
 		"classes"	"weapon_g3sg1;"
@@ -3173,7 +3488,7 @@
 	"Сажа"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"БАХ"
 	{
@@ -3233,7 +3548,7 @@
 	"Латунь"
 	{
 		"index"		"159"
-		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;"
+		"classes"	"weapon_glock;weapon_bizon;weapon_tec9;weapon_scar20;"
 	}
 	"Грецкий орех"
 	{
@@ -3268,7 +3583,7 @@
 	"Джунгли"
 	{
 		"index"		"151"
-		"classes"	"weapon_fiveseven;"
+		"classes"	"weapon_fiveseven;weapon_m249;"
 	}
 	"Городская штриховка"
 	{
@@ -3288,7 +3603,7 @@
 	"Городская маскировка"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Апельсиновая корка"
 	{
@@ -3353,7 +3668,7 @@
 	"Смерч"
 	{
 		"index"		"101"
-		"classes"	"weapon_m4a1;weapon_mac10;weapon_sg556;"
+		"classes"	"weapon_galilar;weapon_m4a1;weapon_mac10;weapon_sg556;"
 	}
 	"Гроза"
 	{
@@ -3413,7 +3728,7 @@
 	"Северный лес"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Зимний лес"
 	{
@@ -3438,7 +3753,7 @@
 	"Африканская сетка"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Скорпион"
 	{
@@ -3473,7 +3788,7 @@
 	"Убийство"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Удар молнии"
 	{
@@ -3498,17 +3813,17 @@
 	"Поверхностная закалка"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Патина"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Вороненая сталь"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Медь"
 	{
@@ -3528,7 +3843,7 @@
 	"Градиент"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Пламя"
 	{
@@ -3623,7 +3938,7 @@
 	"Кровавая паутина"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Черепа"
 	{
@@ -3653,7 +3968,7 @@
 	"Пиксельный камуфляж «Лес»"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Карамельное яблоко"
 	{
